# sigmahqrag

./: .coverage  .coveragerc  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  __init__.py  dev_server.py  main.py  plan.md  pyproject.toml  refractor.md  test_embedding_service.py  test_imports.py
.github/workflows/: deploy.yml  lint.yml
config/: github.yml
data/: chroma_db  config.json  github.json
data/config/: environment.json  github.json  lm_studio.json  ports.json  production.json  sigmahqllm.json
data/models/chroma_db/: chroma.sqlite3
docs/: API_REFERENCE.md  CHANGELOG.md  CHAT_HISTORY_FIXES_SUMMARY.md  CLI_OPTIMIZATION_ANALYSIS.md  DEPLOYMENT_GUIDE.md  LM_STUDIO_SETUP_GUIDE.md  LOGGING.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_SUMMARY.md  QUICK_START_PRODUCTION.md  RAG_CLI_GUIDE.md  RAG_SYSTEM_OPTIMIZATION_GUIDE.md  SYSTEM_OPTIMIZATION_SUMMARY.md  TECHNICAL.md  USER_MANUAL.md  UV_SETUP_SUMMARY.md  structure.md
docs/DEPLOYMENT/: DEPLOYMENT_GUIDE.md
docs/GETTING_STARTED/: QUICK_START.md
docs/SETUP_GUIDES/: LM_STUDIO_SETUP_GUIDE.md
docs/TECHNICAL_DOCS/: structure.md
docs/USER_DOCUMENTATION/: API_REFERENCE.md  USER_MANUAL.md  tab_chat.md  tab_config.md  tab_data.md  tab_files.md  tab_github.md  tab_logs.md
docs/exemple/: example_rag_usage.py  example_usage_optimized.py
docs/plans/: 2024-02-27-chat-interface-design.md  2024-02-27-rag-integration-with-ollama-python-design.md  2024-03-01-github-repo-management-fix.md  2026-02-27-rag-integration-with-ollama-python-design.md
mod/: rag.py
src/: __init__.py  app.py
src/application/: __init__.py  app.py  app_factory.py  application.py  config_manager.py  gradio_app.py
src/cli/: __init__.py  rag_cli.py
src/components/: base_component.py  chat_interface.py  config_management.py  data_management.py  file_management.py  github_management.py  logs_viewer.py
src/core/: __init__.py  async_manager.py  chat_service.py  llm_service.py  local_embedding_service.py  rag_service.py
src/gradio_app/: __init__.py  app.py
src/gradio_app/components/: __init__.py  base_component.py  chat_interface.py  config_management.py  data_management.py  file_management.py  github_management.py  logs_viewer.py
src/infrastructure/: __init__.py  database_setup.py  dependency_fix.py  environment_setup.py  file_storage_setup.py  lm_studio_setup.py  port_manager.py  production_setup.py  service_lifecycle.py
src/infrastructure/database/: sqlite_manager.py
src/infrastructure/file_system/: __init__.py  file_processor.py  file_storage.py
src/models/: __init__.py  chat_history_service.py  chat_service.py  config_service.py  data_service.py  file_processor.py  llm_service.py  llm_service_optimized.py  logging_service.py  rag_chat_service.py  repository_service.py
src/nicegui_app/: __init__.py  app.py
src/nicegui_app/components/: __init__.py  card.py  chat_message.py  confirm_dialog.py  file_upload.py  loading_spinner.py  markdown_renderer.py  notification.py  typing_indicator.py
src/nicegui_app/models/: __init__.py  chat_history_service.py  chat_service.py  config_service.py  data_service.py  document_processor.py  file_processor.py  llm_service.py  llm_service_optimized.py  lm_studio_embeddings.py  logging_service.py  rag_service.py  rag_service_optimized.py  repository_service.py
src/nicegui_app/pages/: __init__.py  chat_page.py  chat_page_simple.py  dashboard.py  data_page.py  github_repo_page.py  github_repo_page.py.bak  logs_page.py  rag_chat_page.py
src/shared/: __init__.py  base_service.py  config_manager.py  constants.py  css.py  exceptions.py  statistics.py  stats_manager.py  types.py  utils.py
tests/: __init__.py  conftest.py  run_tests.py  test_core_services.py  test_data_service.py  test_error_handling.py  test_github_repo_config.py  test_github_repo_display.py  test_github_repo_grid.py  test_github_repo_removal.py  test_integration.py  test_lm_studio_integration.py  test_local_embedding_service.py  test_models.py  test_performance.py  test_rag_functionality.py
tests/files/config/: app_config.json  github.json  llm_config.json  repository_config.json  test_config.json
