[project]
name = "sigmahqrag"
version = "2026.02.27"
description = "SigmaHQ RAG application with document processing and LLM integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.10.2",
    "nicegui>=3.8.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "mypy>=1.19.1",
    "ruff>=0.15.4",
    "pyflakes>=3.4.0",
]

[project.scripts]
sigmahqrag = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nicegui_app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "RUF100",  # Unused noqa (default off)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files
"tests/*" = ["E501"]  # Allow long lines in tests

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
strict_equality = true

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pyflakes>=3.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
