[project]
name = "sigmahqrag"
dynamic = ["version"]
description = "SigmaHQ RAG application with document processing and LLM integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.10.2",
    "openai>=1.50.0",
    "chromadb>=0.5.0",
    "gitpython>=3.1.0",
    "colorama>=0.4.6",
    "pillow>=12.1.1",
    "gradio>=6.9.0",
    "watchdog>=6.0.0",
    "black>=26.1.0",
    "aiohttp>=3.13.3",
    "psutil>=7.2.2",
    "sentence-transformers>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.19.1",
    "pyflakes>=3.4.0",
    "ruff>=0.15.4",
]

[project.scripts]
sigmahqrag = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short -ra"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.eggs
  | \.git
  | \.mypy_cache
  | venv
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "RUF100",  # Unused noqa
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
strict_equality = true